fix errors in execution.api solution

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /IdeaPlugin/build
 /IdeaPlugin/mps-core/lib
 /IdeaPlugin/mps-core/languages
+/IdeaPlugin/tests/blProject/.idea/workspace.xml
 classes
 classes_gen
 testclasses
