--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 /IdeaPlugin/mps-core/languages
 /IdeaPlugin/tests/blProject/.idea/workspace.xml
 /IdeaPlugin/tests/multiModulesProject/.idea/workspace.xml
-$IDEA_PLUGINS_SANDBOX_FOLDER$
+/IdeaPlugin/buildScript/build/tmp/*
+/IdeaPlugin/buildScript/build/artifacts/*
 classes
 classes_gen
 testclasses
