split idea-module debugger-api

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ teamcity-info.xml
 *.hprof
 $IDEA_PLUGINS_SANDBOX_FOLDER$
 *.class
+plugins/debugger-api/lib/*.jar
+plugins/debugger-java/lib/*.jar
