--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ $IDEA_PLUGINS_SANDBOX_FOLDER$
 *.class
 plugins/debugger-api/lib/*.jar
 plugins/debugger-java/lib/*.jar
+plugins/execution-languages/lib/*.jar
