--- a/plugins/build-deprecated/META-INF/plugin.xml
+++ b/plugins/build-deprecated/META-INF/plugin.xml
@@ -1,30 +1,29 @@
-<!--
-  ~ Copyright 2003-2011 JetBrains s.r.o.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<idea-plugin version="2" xmlns:xi="http://www.w3.org/2001/XInclude">
+<!DOCTYPE idea-plugin
+  PUBLIC
+    "Plugin/DTD"
+    "http://plugins.intellij.net/plugin.dtd"
+>
+<idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
   <id>jetbrains.mps.build.deprecated</id>
   <name>MPS Deprecated Build language</name>
-  <description>Deprecated build languages</description>
-  <category>Custom Languages</category>
-  <version>1.0.0</version>
-  <vendor url="http://www.jetbrains.com" email="support@jetbrains.com">JetBrains s.r.o.</vendor>
-  <depends>jetbrains.mps.build</depends>
-
+  <description>Provides (deprecated) build languages for MPS</description>
+  <version>1.0</version>
+  <vendor url="http://www.jetbrains.com/mps/">JetBrains</vendor>
+  <idea-version since-build="3000"></idea-version>
+    
+  <depends>jetbrains.mps.execution.languages</depends>
+  <depends>jetbrains.mps.execution.configurations</depends>
+  <depends>jetbrains.mps.debugger-java</depends>
+  <depends>jetbrains.mps.debugger-api</depends>
+    
+  <application-components>
+    <component>
+      <implementation-class>jetbrains.mps.build.deprecated.execution.Execution_PluginInitializer</implementation-class>
+    </component>
+  </application-components>
+    
   <extensions defaultExtensionNs="com.intellij">
-    <mps.LanguageLibrary dir="/languages"/>
-    <errorHandler implementation="jetbrains.mps.ide.blame.CharismaReporter"/>
+    <mps.LanguageLibrary dir="/"></mps.LanguageLibrary>
+    <errorHandler implementation="jetbrains.mps.ide.blame.CharismaReporter"></errorHandler>
   </extensions>
 </idea-plugin>
