--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .DS_Store
 .idea/workspace.xml
 .idea/inspectionProfiles
+/build/solution/.idea/workspace.xml
 /MPSPlugin/.idea/workspace.xml
 /MPSPlugin/apiclasses
 /IdeaPlugin/.idea/workspace.xml
