--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /build/solution/.idea/workspace.xml
 /MPSPlugin/.idea/workspace.xml
 /MPSPlugin/apiclasses
+/IdeaPlugin/availables.xml
 /IdeaPlugin/.idea/workspace.xml
 /IdeaPlugin/build
 /IdeaPlugin/build.properties
